--- a/index.html
+++ b/index.html
@@ -38,6 +38,20 @@
     </div>
   </header>
 <main class="main">
+    <section class="site-hero">
+      <div class="container">
+        <div class="hero">
+          <div class="hero-content">
+            <h1 class="hero__heading">
+              Hey, I’m Alex Spencer and I love building beautiful websites
+            </h1>
+            <a class="button__link" href="#">About Me</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
 <section class="site-about">
     <div class="container">
       <div class="about">
