--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
     </div>
   </section>
 </main>
+
 <!-- FOOTER -->
   <footer class="site-footer">
     <div class="container">
@@ -152,6 +153,6 @@
       </div>
     </div>
   </footer>
-  <script src="js/main.js"></script>
+  <!-- <script src="js/main.js"></script> -->
 </body>
 </html>
