--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="sass/main.scss">
   <!-- <link rel="stylesheet" href="css/main.min.css"> -->
-  <title>Minimalist Porfolio</title>
+  <title>Najot Ta'lim</title>
 </head>
 <body>
 <!-- HEADER -->
@@ -153,6 +153,6 @@
       </div>
     </div>
   </footer>
-  <!-- <script src="js/main.js"></script> -->
+  <script src="js/main.js"></script>
 </body>
 </html>
